parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Program
Rule 1     Program -> Statements
Rule 2     Statements -> Statement
Rule 3     Statements -> Statements SEM Statement
Rule 4     Statement -> If
Rule 5     Statement -> While
Rule 6     Statement -> Write
Rule 7     Statement -> Read
Rule 8     Statement -> Assignment
Rule 9     If -> IF Condition THEN Statements END
Rule 10    If -> IF Condition THEN Statements ELSE Statements END
Rule 11    While -> WHILE Comparison DO Statements END
Rule 12    Assignment -> Id BEC Expression
Rule 13    Comparison -> Expression Relation Expression
Rule 14    Write -> WRITE Expression
Rule 15    Read -> READ Id
Rule 16    Condition -> Comparison
Rule 17    Condition -> Boolean
Rule 18    Boolean -> True
Rule 19    Boolean -> False
Rule 20    Relation -> EQ
Rule 21    Relation -> NEQ
Rule 22    Relation -> LESS
Rule 23    Relation -> LEQ
Rule 24    Relation -> GRTR
Rule 25    Relation -> GEQ
Rule 26    Expression -> Expression ADD Expression
Rule 27    Expression -> Expression SUB Expression
Rule 28    Expression -> Expression MUL Expression
Rule 29    Expression -> Expression DIV Expression
Rule 30    Expression -> LPAR Expression RPAR
Rule 31    Expression -> NUM
Rule 32    Expression -> Id
Rule 33    Id -> ID

Terminals, with rules where they appear

ADD                  : 26
BEC                  : 12
DIV                  : 29
DO                   : 11
ELSE                 : 10
END                  : 9 10 11
EQ                   : 20
False                : 19
GEQ                  : 25
GRTR                 : 24
ID                   : 33
IF                   : 9 10
LEQ                  : 23
LESS                 : 22
LPAR                 : 30
MUL                  : 28
NEQ                  : 21
NUM                  : 31
READ                 : 15
RPAR                 : 30
SEM                  : 3
SUB                  : 27
THEN                 : 9 10
True                 : 18
WHILE                : 11
WRITE                : 14
error                : 

Nonterminals, with rules where they appear

Assignment           : 8
Boolean              : 17
Comparison           : 11 16
Condition            : 9 10
Expression           : 12 13 13 14 26 26 27 27 28 28 29 29 30
Id                   : 12 15 32
If                   : 4
Program              : 0
Read                 : 7
Relation             : 13
Statement            : 2 3
Statements           : 1 3 9 10 10 11
While                : 5
Write                : 6

Parsing method: LALR

state 0

    (0) S' -> . Program
    (1) Program -> . Statements
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Write
    (7) Statement -> . Read
    (8) Statement -> . Assignment
    (9) If -> . IF Condition THEN Statements END
    (10) If -> . IF Condition THEN Statements ELSE Statements END
    (11) While -> . WHILE Comparison DO Statements END
    (14) Write -> . WRITE Expression
    (15) Read -> . READ Id
    (12) Assignment -> . Id BEC Expression
    (33) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    WRITE           shift and go to state 11
    READ            shift and go to state 12
    ID              shift and go to state 14

    Program                        shift and go to state 1
    Statements                     shift and go to state 2
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Write                          shift and go to state 6
    Read                           shift and go to state 7
    Assignment                     shift and go to state 8
    Id                             shift and go to state 13

state 1

    (0) S' -> Program .



state 2

    (1) Program -> Statements .
    (3) Statements -> Statements . SEM Statement

    $end            reduce using rule 1 (Program -> Statements .)
    SEM             shift and go to state 15


state 3

    (2) Statements -> Statement .

    SEM             reduce using rule 2 (Statements -> Statement .)
    $end            reduce using rule 2 (Statements -> Statement .)
    END             reduce using rule 2 (Statements -> Statement .)
    ELSE            reduce using rule 2 (Statements -> Statement .)


state 4

    (4) Statement -> If .

    SEM             reduce using rule 4 (Statement -> If .)
    $end            reduce using rule 4 (Statement -> If .)
    END             reduce using rule 4 (Statement -> If .)
    ELSE            reduce using rule 4 (Statement -> If .)


state 5

    (5) Statement -> While .

    SEM             reduce using rule 5 (Statement -> While .)
    $end            reduce using rule 5 (Statement -> While .)
    END             reduce using rule 5 (Statement -> While .)
    ELSE            reduce using rule 5 (Statement -> While .)


state 6

    (6) Statement -> Write .

    SEM             reduce using rule 6 (Statement -> Write .)
    $end            reduce using rule 6 (Statement -> Write .)
    END             reduce using rule 6 (Statement -> Write .)
    ELSE            reduce using rule 6 (Statement -> Write .)


state 7

    (7) Statement -> Read .

    SEM             reduce using rule 7 (Statement -> Read .)
    $end            reduce using rule 7 (Statement -> Read .)
    END             reduce using rule 7 (Statement -> Read .)
    ELSE            reduce using rule 7 (Statement -> Read .)


state 8

    (8) Statement -> Assignment .

    SEM             reduce using rule 8 (Statement -> Assignment .)
    $end            reduce using rule 8 (Statement -> Assignment .)
    END             reduce using rule 8 (Statement -> Assignment .)
    ELSE            reduce using rule 8 (Statement -> Assignment .)


state 9

    (9) If -> IF . Condition THEN Statements END
    (10) If -> IF . Condition THEN Statements ELSE Statements END
    (16) Condition -> . Comparison
    (17) Condition -> . Boolean
    (13) Comparison -> . Expression Relation Expression
    (18) Boolean -> . True
    (19) Boolean -> . False
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    True            shift and go to state 20
    False           shift and go to state 21
    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Condition                      shift and go to state 16
    Comparison                     shift and go to state 17
    Boolean                        shift and go to state 18
    Expression                     shift and go to state 19
    Id                             shift and go to state 24

state 10

    (11) While -> WHILE . Comparison DO Statements END
    (13) Comparison -> . Expression Relation Expression
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Comparison                     shift and go to state 25
    Expression                     shift and go to state 19
    Id                             shift and go to state 24

state 11

    (14) Write -> WRITE . Expression
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 26
    Id                             shift and go to state 24

state 12

    (15) Read -> READ . Id
    (33) Id -> . ID

    ID              shift and go to state 14

    Id                             shift and go to state 27

state 13

    (12) Assignment -> Id . BEC Expression

    BEC             shift and go to state 28


state 14

    (33) Id -> ID .

    BEC             reduce using rule 33 (Id -> ID .)
    ADD             reduce using rule 33 (Id -> ID .)
    SUB             reduce using rule 33 (Id -> ID .)
    MUL             reduce using rule 33 (Id -> ID .)
    DIV             reduce using rule 33 (Id -> ID .)
    EQ              reduce using rule 33 (Id -> ID .)
    NEQ             reduce using rule 33 (Id -> ID .)
    LESS            reduce using rule 33 (Id -> ID .)
    LEQ             reduce using rule 33 (Id -> ID .)
    GRTR            reduce using rule 33 (Id -> ID .)
    GEQ             reduce using rule 33 (Id -> ID .)
    SEM             reduce using rule 33 (Id -> ID .)
    $end            reduce using rule 33 (Id -> ID .)
    END             reduce using rule 33 (Id -> ID .)
    ELSE            reduce using rule 33 (Id -> ID .)
    RPAR            reduce using rule 33 (Id -> ID .)
    THEN            reduce using rule 33 (Id -> ID .)
    DO              reduce using rule 33 (Id -> ID .)


state 15

    (3) Statements -> Statements SEM . Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Write
    (7) Statement -> . Read
    (8) Statement -> . Assignment
    (9) If -> . IF Condition THEN Statements END
    (10) If -> . IF Condition THEN Statements ELSE Statements END
    (11) While -> . WHILE Comparison DO Statements END
    (14) Write -> . WRITE Expression
    (15) Read -> . READ Id
    (12) Assignment -> . Id BEC Expression
    (33) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    WRITE           shift and go to state 11
    READ            shift and go to state 12
    ID              shift and go to state 14

    Statement                      shift and go to state 29
    If                             shift and go to state 4
    While                          shift and go to state 5
    Write                          shift and go to state 6
    Read                           shift and go to state 7
    Assignment                     shift and go to state 8
    Id                             shift and go to state 13

state 16

    (9) If -> IF Condition . THEN Statements END
    (10) If -> IF Condition . THEN Statements ELSE Statements END

    THEN            shift and go to state 30


state 17

    (16) Condition -> Comparison .

    THEN            reduce using rule 16 (Condition -> Comparison .)


state 18

    (17) Condition -> Boolean .

    THEN            reduce using rule 17 (Condition -> Boolean .)


state 19

    (13) Comparison -> Expression . Relation Expression
    (26) Expression -> Expression . ADD Expression
    (27) Expression -> Expression . SUB Expression
    (28) Expression -> Expression . MUL Expression
    (29) Expression -> Expression . DIV Expression
    (20) Relation -> . EQ
    (21) Relation -> . NEQ
    (22) Relation -> . LESS
    (23) Relation -> . LEQ
    (24) Relation -> . GRTR
    (25) Relation -> . GEQ

    ADD             shift and go to state 32
    SUB             shift and go to state 33
    MUL             shift and go to state 34
    DIV             shift and go to state 35
    EQ              shift and go to state 36
    NEQ             shift and go to state 37
    LESS            shift and go to state 38
    LEQ             shift and go to state 39
    GRTR            shift and go to state 40
    GEQ             shift and go to state 41

    Relation                       shift and go to state 31

state 20

    (18) Boolean -> True .

    THEN            reduce using rule 18 (Boolean -> True .)


state 21

    (19) Boolean -> False .

    THEN            reduce using rule 19 (Boolean -> False .)


state 22

    (30) Expression -> LPAR . Expression RPAR
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 42
    Id                             shift and go to state 24

state 23

    (31) Expression -> NUM .

    ADD             reduce using rule 31 (Expression -> NUM .)
    SUB             reduce using rule 31 (Expression -> NUM .)
    MUL             reduce using rule 31 (Expression -> NUM .)
    DIV             reduce using rule 31 (Expression -> NUM .)
    EQ              reduce using rule 31 (Expression -> NUM .)
    NEQ             reduce using rule 31 (Expression -> NUM .)
    LESS            reduce using rule 31 (Expression -> NUM .)
    LEQ             reduce using rule 31 (Expression -> NUM .)
    GRTR            reduce using rule 31 (Expression -> NUM .)
    GEQ             reduce using rule 31 (Expression -> NUM .)
    SEM             reduce using rule 31 (Expression -> NUM .)
    $end            reduce using rule 31 (Expression -> NUM .)
    END             reduce using rule 31 (Expression -> NUM .)
    ELSE            reduce using rule 31 (Expression -> NUM .)
    RPAR            reduce using rule 31 (Expression -> NUM .)
    THEN            reduce using rule 31 (Expression -> NUM .)
    DO              reduce using rule 31 (Expression -> NUM .)


state 24

    (32) Expression -> Id .

    ADD             reduce using rule 32 (Expression -> Id .)
    SUB             reduce using rule 32 (Expression -> Id .)
    MUL             reduce using rule 32 (Expression -> Id .)
    DIV             reduce using rule 32 (Expression -> Id .)
    EQ              reduce using rule 32 (Expression -> Id .)
    NEQ             reduce using rule 32 (Expression -> Id .)
    LESS            reduce using rule 32 (Expression -> Id .)
    LEQ             reduce using rule 32 (Expression -> Id .)
    GRTR            reduce using rule 32 (Expression -> Id .)
    GEQ             reduce using rule 32 (Expression -> Id .)
    SEM             reduce using rule 32 (Expression -> Id .)
    $end            reduce using rule 32 (Expression -> Id .)
    END             reduce using rule 32 (Expression -> Id .)
    ELSE            reduce using rule 32 (Expression -> Id .)
    RPAR            reduce using rule 32 (Expression -> Id .)
    THEN            reduce using rule 32 (Expression -> Id .)
    DO              reduce using rule 32 (Expression -> Id .)


state 25

    (11) While -> WHILE Comparison . DO Statements END

    DO              shift and go to state 43


state 26

    (14) Write -> WRITE Expression .
    (26) Expression -> Expression . ADD Expression
    (27) Expression -> Expression . SUB Expression
    (28) Expression -> Expression . MUL Expression
    (29) Expression -> Expression . DIV Expression

    SEM             reduce using rule 14 (Write -> WRITE Expression .)
    $end            reduce using rule 14 (Write -> WRITE Expression .)
    END             reduce using rule 14 (Write -> WRITE Expression .)
    ELSE            reduce using rule 14 (Write -> WRITE Expression .)
    ADD             shift and go to state 32
    SUB             shift and go to state 33
    MUL             shift and go to state 34
    DIV             shift and go to state 35


state 27

    (15) Read -> READ Id .

    SEM             reduce using rule 15 (Read -> READ Id .)
    $end            reduce using rule 15 (Read -> READ Id .)
    END             reduce using rule 15 (Read -> READ Id .)
    ELSE            reduce using rule 15 (Read -> READ Id .)


state 28

    (12) Assignment -> Id BEC . Expression
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Id                             shift and go to state 24
    Expression                     shift and go to state 44

state 29

    (3) Statements -> Statements SEM Statement .

    SEM             reduce using rule 3 (Statements -> Statements SEM Statement .)
    $end            reduce using rule 3 (Statements -> Statements SEM Statement .)
    END             reduce using rule 3 (Statements -> Statements SEM Statement .)
    ELSE            reduce using rule 3 (Statements -> Statements SEM Statement .)


state 30

    (9) If -> IF Condition THEN . Statements END
    (10) If -> IF Condition THEN . Statements ELSE Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Write
    (7) Statement -> . Read
    (8) Statement -> . Assignment
    (9) If -> . IF Condition THEN Statements END
    (10) If -> . IF Condition THEN Statements ELSE Statements END
    (11) While -> . WHILE Comparison DO Statements END
    (14) Write -> . WRITE Expression
    (15) Read -> . READ Id
    (12) Assignment -> . Id BEC Expression
    (33) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    WRITE           shift and go to state 11
    READ            shift and go to state 12
    ID              shift and go to state 14

    Statements                     shift and go to state 45
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Write                          shift and go to state 6
    Read                           shift and go to state 7
    Assignment                     shift and go to state 8
    Id                             shift and go to state 13

state 31

    (13) Comparison -> Expression Relation . Expression
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 46
    Id                             shift and go to state 24

state 32

    (26) Expression -> Expression ADD . Expression
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 47
    Id                             shift and go to state 24

state 33

    (27) Expression -> Expression SUB . Expression
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 48
    Id                             shift and go to state 24

state 34

    (28) Expression -> Expression MUL . Expression
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 49
    Id                             shift and go to state 24

state 35

    (29) Expression -> Expression DIV . Expression
    (26) Expression -> . Expression ADD Expression
    (27) Expression -> . Expression SUB Expression
    (28) Expression -> . Expression MUL Expression
    (29) Expression -> . Expression DIV Expression
    (30) Expression -> . LPAR Expression RPAR
    (31) Expression -> . NUM
    (32) Expression -> . Id
    (33) Id -> . ID

    LPAR            shift and go to state 22
    NUM             shift and go to state 23
    ID              shift and go to state 14

    Expression                     shift and go to state 50
    Id                             shift and go to state 24

state 36

    (20) Relation -> EQ .

    LPAR            reduce using rule 20 (Relation -> EQ .)
    NUM             reduce using rule 20 (Relation -> EQ .)
    ID              reduce using rule 20 (Relation -> EQ .)


state 37

    (21) Relation -> NEQ .

    LPAR            reduce using rule 21 (Relation -> NEQ .)
    NUM             reduce using rule 21 (Relation -> NEQ .)
    ID              reduce using rule 21 (Relation -> NEQ .)


state 38

    (22) Relation -> LESS .

    LPAR            reduce using rule 22 (Relation -> LESS .)
    NUM             reduce using rule 22 (Relation -> LESS .)
    ID              reduce using rule 22 (Relation -> LESS .)


state 39

    (23) Relation -> LEQ .

    LPAR            reduce using rule 23 (Relation -> LEQ .)
    NUM             reduce using rule 23 (Relation -> LEQ .)
    ID              reduce using rule 23 (Relation -> LEQ .)


state 40

    (24) Relation -> GRTR .

    LPAR            reduce using rule 24 (Relation -> GRTR .)
    NUM             reduce using rule 24 (Relation -> GRTR .)
    ID              reduce using rule 24 (Relation -> GRTR .)


state 41

    (25) Relation -> GEQ .

    LPAR            reduce using rule 25 (Relation -> GEQ .)
    NUM             reduce using rule 25 (Relation -> GEQ .)
    ID              reduce using rule 25 (Relation -> GEQ .)


state 42

    (30) Expression -> LPAR Expression . RPAR
    (26) Expression -> Expression . ADD Expression
    (27) Expression -> Expression . SUB Expression
    (28) Expression -> Expression . MUL Expression
    (29) Expression -> Expression . DIV Expression

    RPAR            shift and go to state 51
    ADD             shift and go to state 32
    SUB             shift and go to state 33
    MUL             shift and go to state 34
    DIV             shift and go to state 35


state 43

    (11) While -> WHILE Comparison DO . Statements END
    (2) Statements -> . Statement
    (3) Statements -> . Statements SEM Statement
    (4) Statement -> . If
    (5) Statement -> . While
    (6) Statement -> . Write
    (7) Statement -> . Read
    (8) Statement -> . Assignment
    (9) If -> . IF Condition THEN Statements END
    (10) If -> . IF Condition THEN Statements ELSE Statements END
    (11) While -> . WHILE Comparison DO Statements END
    (14) Write -> . WRITE Expression
    (15) Read -> . READ Id
    (12) Assignment -> . Id BEC Expression
    (33) Id -> . ID

    IF              shift and go to state 9
    WHILE           shift and go to state 10
    WRITE           shift and go to state 11
    READ            shift and go to state 12
    ID              shift and go to state 14

    Statements                     shift and go to state 52
    Statement                      shift and go to state 3
    If                             shift and go to state 4
    While                          shift and go to state 5
    Write                          shift and go to state 6
    Read                           shift and go to state 7
    Assignment                     shift and go to state 8
    Id                             shift and go to state 13

state 44

    (12) Assignment -> Id BEC Expression .
    (26) Expression -> Expression . ADD Expression
    (27) Expression -> Expression . SUB Expression
    (28) Expression -> Expression . MUL Expression
    (29) Expression -> Expression . DIV Expression

    SEM             reduce using rule 12 (Assignment -> Id BEC Expression .)
    $end            reduce using rule 12 (Assignment -> Id BEC Expression .)
    END             reduce using rule 12 (Assignment -> Id BEC Expression .)
    ELSE            reduce using rule 12 (Assignment -> Id BEC Expression .)
    ADD             shift and go to state 32
    SUB             shift and go to state 33
    MUL             shift and go to state 34
    DIV             shift and go to state 35


state 45

    (9) If -> IF Condition THEN Statements . END
    (10) If -> IF Condition THEN Statements . ELSE Statements END
    (3) Statements -> Statements . SEM Statement

    END             shift and go to state 53
    ELSE            shift and go to state 54
    SEM             shift and go to state 15


state 46

    (13) Comparison -> Expression Relation Expression .
    (26) Expression -> Expression . ADD Expression
    (27) Expression -> Expression . SUB Expression
    (28) Expression -> Expression . MUL Expression
    (29) Expression -> Expression . DIV Expression
